--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -6,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تغییر رمز عبور</title>
 
-  <link rel="stylesheet" href="./assets/css/output.css" />
-  <link rel="stylesheet" href="./assets/css/font.css">
+  <link rel="stylesheet" href="{% static 'css/output.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/font.css' %}">
   <style>
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
@@ -22,7 +23,7 @@
       <form action="">
         <div class="mb-2">
           <a href="./index.html">
-            <img src="./assets/image/logo.png" alt="" class="w-36 mx-auto">
+            <img src="{% static 'image/logo.png' %}" alt="" class="w-36 mx-auto">
           </a>
         </div>
         <div class="opacity-80 text-lg mt-3 mb-5">
@@ -68,6 +69,6 @@
     </div>
   </div>
 </body>
-<script src="./assets/js/main.js"></script>
-<script src="./assets/js/verifyUser.js"></script>
+<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/main.js' %}x"></script>
 </html>
